--- a/dsc102.md
+++ b/dsc102.md
@@ -4,7 +4,7 @@
 
 * While we are not permitted to share our code publically, we can describe what we had done:
     * We were provided with 20GB Text Dataset of Amazon Reviews
-    * The endgoal was building a machine learning model on the text reviews and predicting the numerical rating that the amazon review ended giving to the product (from 1 to 5). This was thus a task of customer satisfaction pedicted from text, or *sentiment analysis*.
+    * The endgoal was building a machine learning model on the text reviews and predicting the numerical rating that the Amazon review ended giving to the product (from 1 to 5). This was thus a task of customer satisfaction predicted from text, or *sentiment analysis*.
     * We used NLP Feature Engineering with PySpark's in-built **TF-IDF Vectorizer**, and **Word2Vec**.
     * We also pre-processed the data with Pyspark's in-built **One-hot-encoding**, and **PCA Dimensionality Reduction**.
     * We ran Data-cleaning and data quality tests with **Type-casting** and **Null Imputation**
