--- a/dsc102.md
+++ b/dsc102.md
@@ -1,6 +1,6 @@
 # DSC102 PySpark Text Classification
 
-* A Pyspark project done by me and Mose Oh for DSC102, a class at UC San Diego covering data engineering
+* A Pyspark project done by me and Moses Oh for DSC102, a class at UC San Diego covering data engineering
 
 * While we are not permitted to share our code publically, we can describe the techniques we were instructed to do:
     * We were provided with 20GB Text Dataset of Amazon Reviews
