--- a/dsc102.md
+++ b/dsc102.md
@@ -1,8 +1,8 @@
-# DSC102 PySpark Text Classification
+# PySpark Text Classification
 
-* A Pyspark project done by me and Moses Oh for DSC102, a class at UC San Diego covering data engineering
+* A Pyspark project done by me and Moses Oh
 
-* While we are not permitted to share our code publically, we can describe the techniques we were instructed to do:
+* The project is as follows:
     * We were provided with 20GB Text Dataset of Amazon Reviews
     * The endgoal was building a machine learning model on the text reviews and predicting the numerical rating that the Amazon review ended giving to the product (from 1 to 5). This was thus a task of customer satisfaction predicted from text, or *sentiment analysis*.
     * We used NLP Feature Engineering with PySpark's in-built **TF-IDF Vectorizer**, and **Word2Vec**.
